src/cloudformation/cf-web-cluster.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Container Cluster",

  "Parameters": {
    "EcsClusterName": {
      "Type": "String",
      "Description": "ECS Cluster Name",
      "Default": "sample-web"
    },
    "VpcId": {
      "Type": "String",
      "Description": "VpcId"
    }
  },

  "Resources": {


    "ContainerInstanceLC": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId": {
          "Fn::FindInMap": ["Region", {
            "Ref": "AWS::Region"
          }, "ami"]
        },
        "InstanceType": {
          "Fn::FindInMap": ["Constant", "Value", "EcsInstanceType"]
        },
        "AssociatePublicIpAddress": true,
        "IamInstanceProfile": "ecsInstanceRole",
        "KeyName": "testing-20151124",
        "SecurityGroups": [{
          "Ref": "EcsSecurityGroup"
        }],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": ["", [
              "#!/bin/bash\n",
              "echo ECS_CLUSTER=", {
                "Ref": "EcsClusterName"
              }, " >> /etc/ecs/ecs.config"
            ]]
          }
        }
      }
    },

    "EcsSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ECS Allowed Ports",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
        }, {
          "IpProtocol": "tcp",
          "FromPort": "1",
          "ToPort": "65535",
          "SourceSecurityGroupId": {
            "Ref": "ElbSecurityGroup"
          }
        }]
      }
    },

    "ElbSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ELB Allowed Ports",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
        }]
      }
    }
  },


  "Mappings": {
    "Constant": {
      "Value": {
        "EcsInstanceType": "t2.micro"
      }
    },
    "Region": {
      "us-east-1": {
        "ami": "ami-ddc7b6b7"
      },
      "us-west-1": {
        "ami": "ami-a39df1c3"
      },
      "us-west-2": {
        "ami": "ami-d74357b6"
      },
      "eu-west-1": {
        "ami": "ami-f1b46b82"
      },
      "ap-northeast-1": {
        "ami": "ami-3077525e"
      },
      "ap-southeast-2": {
        "ami": "ami-23b4eb40"
      }
    }
  }

}
